--- a/sass/utils/_reset.scss
+++ b/sass/utils/_reset.scss
@@ -25,4 +25,10 @@ body {
     font-family: "Roboto", "Raleway", sans-serif;
     color: $colorFontPrimary;
     background: $colorBackgroundPrimary;
+    overflow-x: visible;
+}
+@media screen and (min-width: 320px) {
+    body {
+        overflow-x: hidden;
+    }
 }
